# V2C

./: .env.example  .gitignore  README.md  pyproject.toml
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: bridge.ts  extension.ts
src/v2c/: __init__.py  cli.py  config.py
src/v2c/asr/: __init__.py  capture.py  engine.py  refiner.py  streaming.py
src/v2c/ast_engine/: __init__.py  editor_action.py  parser.py  queries.py
src/v2c/bridge/: __init__.py  protocol.py  server.py
src/v2c/intent/: __init__.py  llm_code_gen.py  llm_parser.py  router.py  rules.py  splitter.py
src/v2c/queries/: python.scm
tests/: conftest.py  test_asr_engine.py  test_ast_engine.py  test_bridge_protocol.py  test_intent_router.py  test_refiner.py  test_rules.py  test_splitter.py
