[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2c"
version = "0.1.0"
description = "Voice-to-Code: A privacy-first, AST-aware voice coding engine for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "V2C Contributors" }]
keywords = ["voice", "speech", "coding", "ast", "developer-tools", "accessibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # ASR / Audio
    "openai-whisper>=20231117",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "webrtcvad>=2.0.10",

    # AST parsing
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",

    # LLM / AI
    "openai>=1.30.0",
    "httpx>=0.27.0",

    # IPC / WebSocket bridge
    "websockets>=12.0",
    "aiohttp>=3.9.0",

    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "jellyfish>=1.0.0",   # phonetic algorithms (Double Metaphone)
    "python-levenshtein>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
]
# Optional: local LLM support via llama.cpp bindings
local-llm = [
    "llama-cpp-python>=0.2.77",
]

[project.scripts]
v2c = "v2c.cli:main"
v2c-server = "v2c.bridge.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"v2c" = ["queries/*.scm", "py.typed"]

# ---------------------------------------------------------------------------
# Ruff (linter)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["v2c"]

# ---------------------------------------------------------------------------
# Black (formatter)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ---------------------------------------------------------------------------
# Mypy (type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=v2c --cov-report=term-missing --cov-report=html"
